<resources>
    <string name="app_name">WakeMeUp</string>
    <string name="alarm">Alarm</string>
    <string name="reminder">Reminder</string>
    <string name="todo">Todo</string>
    <string name="task">Task</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="theme">Night Mode</string>
    <string name="title_activity_setting">Settings</string>

    <!-- Strings related to Settings -->

    <!-- raghu General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_raghu_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_raghu_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- raghu settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- raghu settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="snooze">Snooze</string>
    <string name="completed">Completed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="label">Label</string>
    <string name="create_progress_help_question">Progress</string>
    <string name="create_timetable_help_question">Timetable</string>
    <string name="create_todo_help_question">Todo</string>
    <string name="create_todo_help_answer">Todo is a day to day activity or task you wish to finish. This app helps you to achiebe exactly the same by providing you a notification time to time. You can also create sub tasks of your todo</string>
    <string name="create_timetable_help_answer">TimeTable is a set of tasks you set for you daily routine. This app helps you to keep track of your time table and also reminds at the particular time.</string>
    <string name="create_progress_help_answer">You can check your progress of the goals or todos you have acheived till date.</string>
</resources>
